# wgs-battery

./: .editorconfig  .flake8  .gitignore  .prettierignore  .prettierrc  README.md  docker-compose.yml  eslint.config.mjs  init.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
backend/: Dockerfile
backend/app/: main.py
backend/app/data/: Cell05_OK01.csv  for_streamlit_test.csv
backend/app/models/: analysis_request.py  file_download_request.py  integrity_check_response.py  preprocessing_request.py  request.py  show_dataframe_request.py  visualization_request.py
backend/app/routes/: __init__.py
backend/app/routes/analysis/: __init__.py
backend/app/routes/data/: __init__.py
backend/app/routes/file/: __init__.py
backend/app/services/: analysis.py  check_intergrity.py  visualize.py
backend/app/utils/: charts.py  config.py  functions.py
backend/notebooks/: anomaly_scoring_by_impulse_factor.ipynb  anomaly_scoring_by_weighted_sum.ipynb  시각화_로우하이패스필터.ipynb  시각화_피크부각_미분필터.ipynb  시각화_피크부각_이동최대최소.ipynb  시각화_피크부각_지수함수합성.ipynb
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AppSidebar.tsx  DataFrameSection.tsx  FileUploadSection.tsx
frontend/src/components/layouts/: DefaultLayout.tsx
frontend/src/lib/: fetcher.ts
frontend/src/pages/: AnalysisSection.tsx  IntegrityTestSection.tsx  PreprocessingSection.tsx  VisualizationSection.tsx  index.tsx
frontend/src/store/: index.ts  setting-state-slice.ts
frontend/src/types/: index.ts
(+15 files in other folders)
